Web page will show a notification if the creation was not successful. 404 errors will be redirected to start.

--- a/gateway-app/src/main/resources/web/gateway/appGroup.html
+++ b/gateway-app/src/main/resources/web/gateway/appGroup.html
@@ -36,4 +36,4 @@ Nothing more here..
 </form>
 <hr>
 
-<button type="button" class="btn btn-danger" ng-click="removeGroup()">Delete group</button>
+<button type="button" class="btn btn-danger" ng-click="removeGroup()"><span class="glyphicon glyphicon-trash"></span> Delete group</button>
