--- a/gateway-app/src/main/resources/web/gateway/loadBalancer.html
+++ b/gateway-app/src/main/resources/web/gateway/loadBalancer.html
@@ -139,5 +139,6 @@
 <hr>
 
 <lb-form ng-if="lbLoadingDone"></lb-form>
+        <hr>
 
-<button type="button" class="btn btn-danger" ng-click="removeLoadBalancer()">Delete</button>
+<button type="button" class="btn btn-danger" ng-click="removeLoadBalancer()"><span class="glyphicon glyphicon-trash"></span> Delete LB</button>
