--- a/gateway-app/src/main/resources/web/gateway/app.html
+++ b/gateway-app/src/main/resources/web/gateway/app.html
@@ -146,4 +146,4 @@
 
 
 <hr>
-<button type="button" class="btn btn-danger" ng-click="removeApp()">Delete application</button>
+<button type="button" class="btn btn-danger" ng-click="removeApp()"><span class="glyphicon glyphicon-trash"></span> Delete application</button>
