--- a/gateway-app/src/main/resources/web/gateway/app.html
+++ b/gateway-app/src/main/resources/web/gateway/app.html
@@ -140,6 +140,13 @@
                placeholder="Enter public url">
         <span class="bg-danger" ng-show="createAppForm.publicUrl.$error.pattern">This path is not valid! Must start with a / followed by a letter.</span>
     </div>
+    <div class="form-group">
+        <label for="inAppPublicUrl">Emails (for notification). Separate by ,</label>
+        <input type="text" ng-model="newApp.emails" class="form-control " id="inAppEmails" name="emails"
+               required
+               placeholder="Enter email(s)">
+    </div>
+
 
     <button type="submit" class="btn btn-primary" ng-disabled="createAppForm.$invalid">Update</button>
 </form>
