--- a/gateway-app/src/main/resources/web/gateway/appGroup.html
+++ b/gateway-app/src/main/resources/web/gateway/appGroup.html
@@ -3,37 +3,51 @@ Nothing more here..
 
 
 <h2>Status</h2>
+<div class="row">
+    <div class="col-sm-6">
+        <h3>All Applications in this group</h3>
 
-<h3>All Applications in this group</h3>
-
-<div class="list-group">
-    <a href="#/app/{{a.id}}" class="list-group-item" ng-repeat="a in allAppsInGroup">
-        <b> {{a.name}}</b> {{a.publicUrl}} ({{a.id}})
-    </a>
+        <div class="list-group">
+            <a href="#/app/{{a.id}}" class="list-group-item" ng-repeat="a in allAppsInGroup">
+                <b> {{a.name}}</b> {{a.publicUrl}} ({{a.id}})
+            </a>
 
 
+        </div>
+    </div>
+    <div class="col-sm-6">
+        <h3>New application to this group</h3>
+
+        <form role="form" ng-submit="createApplication()" name="createAppForm" novalidate>
+
+            <div class="form-group">
+                <label for="inAppName">Name</label>
+                <input type="text" ng-model="newApp.name" class="form-control" id="inAppName" name="name"
+                       required
+                       placeholder="Enter application name">
+            </div>
+            <div class="form-group">
+                <label for="inAppPublicUrl">Public Path</label>
+                <input type="text" ng-model="newApp.publicUrl" class="form-control " id="inAppPublicUrl"
+                       name="publicUrl"
+                       ng-pattern="/^/[a-zA-Z]+/"
+                       required
+                       placeholder="Enter public url">
+                <span class="bg-danger" ng-show="createAppForm.publicUrl.$error.pattern">This path is not valid! Must start with a / followed by a letter.</span>
+            </div>
+            <div class="form-group">
+                <label for="inAppPublicUrl">Emails (for notification). Separate by ,</label>
+                <input type="text" ng-model="newApp.emails" class="form-control " id="inAppEmails" name="emails"
+                       required
+                       placeholder="Enter email(s)">
+            </div>
+
+            <button type="submit" class="btn btn-primary" ng-disabled="createAppForm.$invalid">Create</button>
+        </form>
+    </div>
 </div>
-
-<h3>New application to this group</h3>
-<form role="form" ng-submit="createApplication()" name="createAppForm" novalidate>
-
-    <div class="form-group">
-        <label for="inAppName">Name</label>
-        <input type="text" ng-model="newApp.name" class="form-control" id="inAppName" name="name"
-               required
-               placeholder="Enter application name">
-    </div>
-    <div class="form-group">
-        <label for="inAppPublicUrl">Public Path</label>
-        <input type="text" ng-model="newApp.publicUrl" class="form-control " id="inAppPublicUrl" name="publicUrl"
-               ng-pattern="/^/[a-zA-Z]+/"
-               required
-               placeholder="Enter public url">
-        <span class="bg-danger" ng-show="createAppForm.publicUrl.$error.pattern">This path is not valid! Must start with a / followed by a letter.</span>
-    </div>
-
-    <button type="submit" class="btn btn-primary" ng-disabled="createAppForm.$invalid">Create</button>
-</form>
 <hr>
 
-<button type="button" class="btn btn-danger" ng-click="removeGroup()"><span class="glyphicon glyphicon-trash"></span> Delete group</button>
+<button type="button" class="btn btn-danger" ng-click="removeGroup()"><span class="glyphicon glyphicon-trash"></span>
+    Delete group
+</button>
