Made a button to test startLoadBalancer

--- a/gateway-app/src/main/resources/web/gateway/loadBalancer.html
+++ b/gateway-app/src/main/resources/web/gateway/loadBalancer.html
@@ -140,5 +140,5 @@
 
 <lb-form ng-if="lbLoadingDone"></lb-form>
         <hr>
-
+<button type="button" class="btn btn-warning" ng-click="startLoadBalancer()"><span class="glyphicon glyphicon-trash"></span> Start LoadBalancer</button>
 <button type="button" class="btn btn-danger" ng-click="removeLoadBalancer()"><span class="glyphicon glyphicon-trash"></span> Delete LB</button>
