--- a/gateway-app/src/main/resources/web/gateway/app.html
+++ b/gateway-app/src/main/resources/web/gateway/app.html
@@ -21,171 +21,177 @@
 
 <h3>Instances / Servers: </h3>
 <div class="row">
-    <div class="col-sm-6 panel panel-default" ng-repeat="(appInstId,appInstValue) in statusAppServers.applicationInstances">
-
-        <div class="panel-body">
-            <h4>App instance id : {{appInstId}} {{appInstValue.name}}</h4>
-        </div>
-
-        <div ng-repeat="(lbId, status) in appInstValue.statuses">
-
-            <div class="alert" role="alert" ng-class="{OPEN:'alert-info', UP:'alert-success', MAINT:'alert-warning', DOWN:'alert-danger','':'active'}[status.status]">
-                LB {{lbId}} | Server: name={{status.svname}}, status={{status.status}} , in/out : {{status.bin}}/{{status.bout}}
+    <div class="col-sm-6" ng-repeat="(appInstId,appInstValue) in statusAppServers.applicationInstances">
+        <div class="panel panel-info">
+            <div class="panel-heading">
+                <h3 class="panel-title">App instance : <b>{{appInstValue.name}}</b> ({{appInstId}})</h3>
             </div>
+            <div class="panel-body">
+                <div ng-repeat="(lbId, status) in appInstValue.statuses">
+
+                    <div class="alert" role="alert"
+                         ng-class="{OPEN:'alert-info', UP:'alert-success', MAINT:'alert-warning', DOWN:'alert-danger','':'active'}[status.status]">
+                        LB {{lbId}} | status={{status.status}} , in/out :
+                        {{status.bin}}/{{status.bout}}
+                    </div>
+                </div>
+            </div>
+
+
         </div>
+    </div>
+    <!--
+    <table class="table">
+        <tr ng-repeat="(key,value) in statusAppServers">
+            <td>Key {{key}} , value:{{value}}</td>
+        </tr>
+
+    </table>
+
+    <table class="table">
+
+        <thead>
+        <tr>
+            <th>Application instance</th>
+            <th ng-repeat="lb in app.loadBalancers">{{lb.name}}</th>
+
+        </tr>
+        </thead>
+
+        <tbody>
+        <tr ng-repeat="appInst in app.applicationInstances">
+            <td>{{statusApp[72000].data.pxname}}</td>
+            <td>{{statusApp[72000].data.status}} : {{statusApp[72000].data.bin}}</td>
+
+        </tr>
+        </tbody>
+    </table>
+    <pre>{{statusApp|json}}</pre>
+    <div class="list-group">
+        <a href="#/lb/{{lb.id}}" class="list-group-item" ng-repeat="lb in app.loadBalancers">
+            <b> {{lb.name}}</b> ({{lb.id}}) {{lb.host}}:{{lb.port}}{{lb.installationPath}}
+        </a>
 
     </div>
-</div>
-<!--
-<table class="table">
-    <tr ng-repeat="(key,value) in statusAppServers">
-        <td>Key {{key}} , value:{{value}}</td>
-    </tr>
+    -->
+    <!--
 
-</table>
+    <div class="progress progress-striped active">
+     <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
+         <span class="sr-only">100% Complete (success)</span>
+     </div>
+    </div>
+    -->
+    <hr>
+    <div class="row">
+        <div class="col-sm-6">
 
-<table class="table">
+            <h3>New Application Instance</h3>
 
-    <thead>
-    <tr>
-        <th>Application instance</th>
-        <th ng-repeat="lb in app.loadBalancers">{{lb.name}}</th>
+            <form role="form" ng-submit="saveAppInst()" name="form">
 
-    </tr>
-    </thead>
-
-    <tbody>
-    <tr ng-repeat="appInst in app.applicationInstances">
-        <td>{{statusApp[72000].data.pxname}}</td>
-        <td>{{statusApp[72000].data.status}} : {{statusApp[72000].data.bin}}</td>
-
-    </tr>
-    </tbody>
-</table>
-<pre>{{statusApp|json}}</pre>
-<div class="list-group">
-    <a href="#/lb/{{lb.id}}" class="list-group-item" ng-repeat="lb in app.loadBalancers">
-        <b> {{lb.name}}</b> ({{lb.id}}) {{lb.host}}:{{lb.port}}{{lb.installationPath}}
-    </a>
-
-</div>
--->
-<!--
-
-<div class="progress progress-striped active">
- <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
-     <span class="sr-only">100% Complete (success)</span>
- </div>
-</div>
--->
-<hr>
-<div class="row">
-    <div class="col-sm-6">
-
-        <h3>New Application Instance</h3>
-
-        <form role="form" ng-submit="saveAppInst()" name="form">
-
-            <div class="form-group" ng-class="{'has-error': form.name.$invalid && !form.name.$pristine}">
-                <label for="inAppInstName">Name</label>
-                <input type="text" ng-model="appInst.name" class="form-control" id="inAppInstName" name="name"
-                       required
-                       placeholder="Enter name">
-            </div>
-            <div class="form-group" ng-class="{'has-error': form.host.$invalid && !form.host.$pristine}">
-                <label for="inAppInstHost">Host</label>
-                <input type="text" ng-model="appInst.host" class="form-control " id="inAppInstHost" name="host"
-                       required
-                       placeholder="Enter host">
-            </div>
-            <div class="form-group">
-                <label for="inAppInstPort">Port</label>
-                <input type="number" ng-model="appInst.port" min="1" max="65535" class="form-control" id="inAppInstPort"
-                       name="port"
-                       required
-                       integer
-                       placeholder="Enter port">
-                <span ng-show="form.port.$error.integer">This is not valid integer!</span>
+                <div class="form-group" ng-class="{'has-error': form.name.$invalid && !form.name.$pristine}">
+                    <label for="inAppInstName">Name</label>
+                    <input type="text" ng-model="appInst.name" class="form-control" id="inAppInstName" name="name"
+                           required
+                           placeholder="Enter name">
+                </div>
+                <div class="form-group" ng-class="{'has-error': form.host.$invalid && !form.host.$pristine}">
+                    <label for="inAppInstHost">Host</label>
+                    <input type="text" ng-model="appInst.host" class="form-control " id="inAppInstHost" name="host"
+                           required
+                           placeholder="Enter host">
+                </div>
+                <div class="form-group">
+                    <label for="inAppInstPort">Port</label>
+                    <input type="number" ng-model="appInst.port" min="1" max="65535" class="form-control"
+                           id="inAppInstPort"
+                           name="port"
+                           required
+                           integer
+                           placeholder="Enter port">
+                    <span ng-show="form.port.$error.integer">This is not valid integer!</span>
                  <span ng-show="form.port.$error.min || form.port.$error.max">
 
       The value must be in range 1 to 65535!</span>
 
+                </div>
+                <div class="form-group">
+                    <label for="inAppInstPath">Path</label>
+                    <input type="text" ng-model="appInst.path" class="form-control" id="inAppInstPath"
+                           ng-pattern="/^/[a-zA-Z]+/" name="path" required
+                           placeholder="Enter path / url">
+                    <span class="bg-danger" ng-show="form.path.$error.pattern">This path is not valid! Must start with a / followed by a letter.</span>
+                </div>
+
+                <button type="submit" class="btn btn-primary" ng-disabled="form.$invalid ">Submit</button>
+            </form>
+
+            <div class="alert alert-success" ng-show="newAppInstAlertSuccess">Application is added successfully (refresh
+                browser)
             </div>
-            <div class="form-group">
-                <label for="inAppInstPath">Path</label>
-                <input type="text" ng-model="appInst.path" class="form-control" id="inAppInstPath"
-                       ng-pattern="/^/[a-zA-Z]+/" name="path" required
-                       placeholder="Enter path / url">
-                <span class="bg-danger" ng-show="form.path.$error.pattern">This path is not valid! Must start with a / followed by a letter.</span>
+        </div>
+
+
+        <div class="col-sm-6">
+
+            <h3>All Application Instances of '{{app.name}}' </h3>
+
+            <div class="list-group">
+                <a href="#/appInst/{{a.id}}" class="list-group-item" ng-repeat="a in app.applicationInstances">
+                    <b> {{a.name}}</b> ({{a.id}}) {{a.host}}/{{a.path}}:{{a.port}}
+                </a>
+
             </div>
 
-            <button type="submit" class="btn btn-primary" ng-disabled="form.$invalid ">Submit</button>
-        </form>
 
-        <div class="alert alert-success" ng-show="newAppInstAlertSuccess">Application is added successfully (refresh
-            browser)
-        </div>
-    </div>
+            <a href="" ng-model="collapsedAppInst" ng-click="collapsedAppInst=!collapsedAppInst"><strong>Toggle
+                (show/hide)</strong> json data</a>
 
-
-    <div class="col-sm-6">
-
-        <h3>All Application Instances of '{{app.name}}' </h3>
-
-        <div class="list-group">
-            <a href="#/appInst/{{a.id}}" class="list-group-item" ng-repeat="a in app.applicationInstances">
-                <b> {{a.name}}</b> ({{a.id}}) {{a.host}}/{{a.path}}:{{a.port}}
-            </a>
+            <div ng-show="collapsedAppInst">
+                <pre>{{app.applications|json}}</pre>
+            </div>
 
         </div>
 
+    </div>
 
-        <a href="" ng-model="collapsedAppInst" ng-click="collapsedAppInst=!collapsedAppInst"><strong>Toggle
-            (show/hide)</strong> json data</a>
+    <hr>
+    <!-- Not used
+    <app-form app-obj="localApp" on-created="onUpdatedApp" ng-if="onAppLoadDone"></app-form>
+    -->
 
-        <div ng-show="collapsedAppInst">
-            <pre>{{app.applications|json}}</pre>
+    <h3>Update application</h3>
+
+    <form role="form" ng-submit="updateApplication()" name="createAppForm" novalidate>
+
+        <div class="form-group">
+            <label for="inAppName">Name</label>
+            <input type="text" ng-model="newApp.name" class="form-control" id="inAppName" name="name"
+                   required
+                   placeholder="Enter application name">
+        </div>
+        <div class="form-group">
+            <label for="inAppPublicUrl">Public Path</label>
+            <input type="text" ng-model="newApp.publicUrl" class="form-control " id="inAppPublicUrl" name="publicUrl"
+                   ng-pattern="/^/[a-zA-Z]+/"
+                   required
+                   placeholder="Enter public url">
+            <span class="bg-danger" ng-show="createAppForm.publicUrl.$error.pattern">This path is not valid! Must start with a / followed by a letter.</span>
+        </div>
+        <div class="form-group">
+            <label for="inAppPublicUrl">Emails (for notification). Separate by ,</label>
+            <input type="text" ng-model="newApp.emails" class="form-control " id="inAppEmails" name="emails"
+                   required
+                   placeholder="Enter email(s)">
         </div>
 
-    </div>
 
-</div>
-
-<hr>
-<!-- Not used
-<app-form app-obj="localApp" on-created="onUpdatedApp" ng-if="onAppLoadDone"></app-form>
--->
-
-<h3>Update application</h3>
-<form role="form" ng-submit="updateApplication()" name="createAppForm" novalidate>
-
-    <div class="form-group">
-        <label for="inAppName">Name</label>
-        <input type="text" ng-model="newApp.name" class="form-control" id="inAppName" name="name"
-               required
-               placeholder="Enter application name">
-    </div>
-    <div class="form-group">
-        <label for="inAppPublicUrl">Public Path</label>
-        <input type="text" ng-model="newApp.publicUrl" class="form-control " id="inAppPublicUrl" name="publicUrl"
-               ng-pattern="/^/[a-zA-Z]+/"
-               required
-               placeholder="Enter public url">
-        <span class="bg-danger" ng-show="createAppForm.publicUrl.$error.pattern">This path is not valid! Must start with a / followed by a letter.</span>
-    </div>
-    <div class="form-group">
-        <label for="inAppPublicUrl">Emails (for notification). Separate by ,</label>
-        <input type="text" ng-model="newApp.emails" class="form-control " id="inAppEmails" name="emails"
-               required
-               placeholder="Enter email(s)">
-    </div>
+        <button type="submit" class="btn btn-primary" ng-disabled="createAppForm.$invalid">Update</button>
+    </form>
 
 
-    <button type="submit" class="btn btn-primary" ng-disabled="createAppForm.$invalid">Update</button>
-</form>
-
-
-<hr>
-<button type="button" class="btn btn-danger" ng-click="removeApp()"><span class="glyphicon glyphicon-trash"></span>
-    Delete application
-</button>
+    <hr>
+    <button type="button" class="btn btn-danger" ng-click="removeApp()"><span class="glyphicon glyphicon-trash"></span>
+        Delete application
+    </button>
