--- a/gateway-app/src/main/resources/web/gateway/app.html
+++ b/gateway-app/src/main/resources/web/gateway/app.html
@@ -5,6 +5,7 @@
     <li>ID : {{app.id}}</li>
     <li>Number of instances : {{app.applicationInstances.length}}</li>
     <li>In group : {{appGroup.name}} ({{app.applicationGroupId}})</li>
+    <li>Check path : {{app.checkPath}}</li>
 
     <li>In load balancers:
         <ul ng-repeat="lbForApp in app.loadBalancers">
@@ -185,6 +186,12 @@
                    required
                    placeholder="Enter email(s)">
         </div>
+      <div class="form-group">
+        <label for="inAppCheckPath">Check path</label>
+        <input type="text" ng-model="newApp.checkPath" class="form-control " id="inAppCheckPath" name="checkPath"
+               required
+               placeholder="Enter check path">
+      </div>
 
 
         <button type="submit" class="btn btn-primary" ng-disabled="createAppForm.$invalid">Update</button>
