--- a/gateway-app/src/main/resources/web/gateway/appGroup.html
+++ b/gateway-app/src/main/resources/web/gateway/appGroup.html
@@ -41,6 +41,14 @@ Nothing more here..
                        required
                        placeholder="Enter email(s)">
             </div>
+          <div class="form-group">
+            <label for="inAppCheckPath">Check path</label>
+            <input type="text" ng-model="newApp.checkPath" class="form-control " id="inAppCheckPath" name="checkpath"
+                   ng-pattern="/^/[a-zA-Z]+/"
+                   required
+                   placeholder="Enter check path">
+            <span class="bg-danger" ng-show="createAppForm.checkpath.$error.pattern">This path is not valid! Must start with a / followed by a letter.</span>
+          </div>
 
             <button type="submit" class="btn btn-primary" ng-disabled="createAppForm.$invalid">Create</button>
         </form>
