--- a/gateway-app/src/main/resources/web/gateway/app.html
+++ b/gateway-app/src/main/resources/web/gateway/app.html
@@ -34,6 +34,9 @@
                          ng-class="{OPEN:'alert-info', UP:'alert-success', MAINT:'alert-warning', DOWN:'alert-danger','':'active'}[status.status]">
                         LB {{lbId}} | status={{status.status}} , in/out :
                         {{status.bin}}/{{status.bout}}
+                        <button type="button" class="btn btn-info pull-right" ng-click="showModalDetail(status)">
+                            Details
+                        </button>
                     </div>
                 </div>
             </div>
@@ -186,12 +189,12 @@
                    required
                    placeholder="Enter email(s)">
         </div>
-      <div class="form-group">
-        <label for="inAppCheckPath">Check path</label>
-        <input type="text" ng-model="newApp.checkPath" class="form-control " id="inAppCheckPath" name="checkPath"
-               required
-               placeholder="Enter check path">
-      </div>
+        <div class="form-group">
+            <label for="inAppCheckPath">Check path</label>
+            <input type="text" ng-model="newApp.checkPath" class="form-control " id="inAppCheckPath" name="checkPath"
+                   required
+                   placeholder="Enter check path">
+        </div>
 
 
         <button type="submit" class="btn btn-primary" ng-disabled="createAppForm.$invalid">Update</button>
@@ -202,3 +205,105 @@
     <button type="button" class="btn btn-danger" ng-click="removeApp()"><span class="glyphicon glyphicon-trash"></span>
         Delete application
     </button>
+
+
+</div>
+
+<!-- Button trigger modal -->
+<button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#modalAppInstDetails">
+    Launch demo modal
+</button>
+
+<!-- Modal -->
+<div class="modal fade bs-example-modal-lg" id="modalAppInstDetails" tabindex="-1" role="dialog"
+     aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span
+                        class="sr-only">Close</span></button>
+                <h4 class="modal-title" id="myModalLabel"> {{currModalStatus.pxname}}: {{currModalStatus.svname}}</h4>
+            </div>
+            <div class="modal-body">
+
+                <h3>Sessions</h3>
+
+                <table class="table table-bordered">
+                    <thead>
+                    <tr>
+                        <th>Current sessions</th>
+                        <th>Total sessions</th>
+                        <th>Max sessions</th>
+                        <th>Limit sessions</th>
+                    </tr>
+                    </thead>
+
+                    <tbody>
+                    <tr>
+                        <td>{{currModalStatus.scur}}</td>
+                        <td>{{currModalStatus.stot}}</td>
+                        <td>{{currModalStatus.smax}}</td>
+                        <td>{{currModalStatus.slim}}</td>
+                    </tr>
+                    </tbody>
+
+                </table>
+
+
+                <h3>Server</h3>
+
+                <table class="table table-bordered">
+                    <thead>
+                    <tr>
+                        <th>Status</th>
+                        <th>Last change</th>
+                        <th>Total downtime</th>
+                        <th>Check status (layer)</th>
+
+                    </tr>
+                    </thead>
+
+                    <tbody>
+                    <tr>
+                        <td>{{currModalStatus.status}}</td>
+                        <td>{{currModalStatus.lastchg}} s</td>
+                        <td>{{currModalStatus.downtime}} s</td>
+                        <td>{{currModalStatus.check_status}} s</td>
+
+                    </tr>
+                    </tbody>
+
+                </table>
+
+
+                <h3>Traffic</h3>
+
+                <table class="table table-bordered">
+                    <thead>
+                    <tr>
+                        <th>Bytes in</th>
+                        <th>Bytes out</th>
+
+
+                    </tr>
+                    </thead>
+
+                    <tbody>
+                    <tr>
+                        <td>{{currModalStatus.bin}}</td>
+                        <td>{{currModalStatus.bout}} s</td>
+
+
+                    </tr>
+                    </tbody>
+
+                </table>
+
+                {{currModalStatus |json}}
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
