--- a/gateway-app/src/main/resources/web/gateway/loadBalancer.html
+++ b/gateway-app/src/main/resources/web/gateway/loadBalancer.html
@@ -1,4 +1,6 @@
-<h1>Load Balancer : {{lb.name}} <small>({{lb.id}})</small></h1>
+<h1>Load Balancer : {{lb.name}}
+    <small>({{lb.id}})</small>
+</h1>
 
 
 <ul class="list-unstyled">
@@ -21,8 +23,10 @@
 </div>
 
 <hr>
-<h3>Status: <span class="text-success" ng-show="rawStatus">HAproxy is running  <span class="glyphicon glyphicon-thumbs-up"></span></span>
-           <span class="text-danger" ng-show="!rawStatus">HAproxy is not running <span class="glyphicon glyphicon-thumbs-down"></span></span>
+<h3>Status: <span class="text-success" ng-show="rawStatus">HAproxy is running  <span
+        class="glyphicon glyphicon-thumbs-up"></span></span>
+    <span class="text-danger" ng-show="!rawStatus">HAproxy is not running <span
+            class="glyphicon glyphicon-thumbs-down"></span></span>
 </h3>
 
 
@@ -51,8 +55,8 @@
         <td>{{s.data.stot}}</td>
         <td>{{s.data.bin}}</td>
         <td>{{s.data.bout}}</td>
-        <td>{{s.data.lastchg}} s</td>
-        <td>{{s.data.downtime}} s</td>
+        <td>{{s.data.lastchg | secondstime}}</td>
+        <td>{{s.data.downtime | secondstime}}</td>
 
         <td>{{s.data.status}}</td>
 
@@ -81,31 +85,6 @@
             </a>
         </div>
 
-        <!--
-                <div class="list-group">
-                    <a class="list-group-item ">
-                        <h4 class="list-group-item-heading">Finch /finch (36000) GroupId: 35000</h4>
-
-                        <p class="list-group-item-text">
-
-                            <button type="button" ng-click="removeAppFromLB(a.id)" class="btn btn-danger btn-sm pull-right">
-                                Remove
-                            </button>
-                        <ul>
-                            <li> server Finch1 127.0.0.1:7272/finch maxconn 32 check</li>
-                            <li> server Finch1 127.0.0.1:7272/finch maxconn 32 check</li>
-                        </ul>
-                        </p>
-                    </a>
-                </div>
-                <div class="list-group">
-                    <a href="#" class="list-group-item ">
-                        <h4 class="list-group-item-heading">App2</h4>
-
-                        <p class="list-group-item-text">inst1<br>inst2</p>
-                    </a>
-                </div>
-        -->
     </div>
 
 
