Made a filter for displaying bytes ->MB,KB,etc

--- a/gateway-app/src/main/resources/web/gateway/loadBalancer.html
+++ b/gateway-app/src/main/resources/web/gateway/loadBalancer.html
@@ -53,8 +53,8 @@
         <td>{{s.data.svname}}</td>
         <td>{{s.data.scur}}</td>
         <td>{{s.data.stot}}</td>
-        <td>{{s.data.bin}}</td>
-        <td>{{s.data.bout}}</td>
+        <td>{{s.data.bin | bytes}}</td>
+        <td>{{s.data.bout| bytes}}</td>
         <td>{{s.data.lastchg | secondstime}}</td>
         <td>{{s.data.downtime | secondstime}}</td>
 
