--- a/gateway-app/src/main/resources/web/gateway/loadBalancer.html
+++ b/gateway-app/src/main/resources/web/gateway/loadBalancer.html
@@ -23,11 +23,26 @@
 </div>
 
 <hr>
-<h3>Status: <span class="text-success" ng-show="rawStatus">HAproxy is running  <span
-        class="glyphicon glyphicon-thumbs-up"></span></span>
-    <span class="text-danger" ng-show="!rawStatus">HAproxy is not running <span
-            class="glyphicon glyphicon-thumbs-down"></span></span>
-</h3>
+
+<div class="row">
+    <div class="col-sm-8">
+        <h3>Status: <span class="text-success" ng-show="rawStatus">HAproxy is running
+            <span class="glyphicon glyphicon-thumbs-up"></span></span>
+            <span class="text-danger" ng-show="!rawStatus">HAproxy is not running
+            <span class="glyphicon glyphicon-thumbs-down"></span></span>
+        </h3>
+
+    </div>
+
+    <div class="col-sm-4">
+
+        <a class="btn pull-right" ng-class="{true: 'btn-primary', false: 'btn-success'}[!autoRefresh]"
+           ng-click="startStopAutoRefresh()">AutoRefresh is {{!autoRefresh&& 'off' || 'on'}} </a>
+
+
+
+    </div>
+</div>
 
 
 <table class="table" ng-show="rawStatus">
